# NoteSlideBackend

./: .gitignore  manage.py  package-lock.json  pyproject.toml  requirements.txt
api/: sitemap.py  urls.py  views.py
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  urls.py  views.py  webpack.config.js
frontend/src/components/: AdManager.js  AddAd.js  AddNote.js  App.js  Auth.js  BusinessAuth.js  BusinessPortal.js  BuyAdCredit.js  Dashboard.js  FavoriteNotes.js  FinalCall.js  Hero.js  LandingPage.js  NoteView.js  Profile.js  PublicProfile.js  Reviews.js  VerifyBusiness.js  VerifyEmail.js  ViewAd.js  ViewNote.js  WhyNoteSlide.js
frontend/templates/frontend/: index.html
noteslide/: asgi.py  settings.py  urls.py  wsgi.py
noteslide/middleware/: prerender.py
